--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -11,5 +11,23 @@ ul,li{
     list-style: none;
 }
 
+::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width : 7px;  /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+}
+::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 5px;
+    box-shadow   : inset 0 0 2px rgba(0, 0, 0, 0.2);
+    background   : #ccc;
+}
+::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    box-shadow   : inset 0 0 2px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background   : #f2f2f2;
+}
+
 
 
