--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -6,7 +6,9 @@ html,body,p,div,h1,h2,h3,h4,h5,ul,li{
     padding: 0;
     margin: 0;
 }
-
+i{
+    font-style:normal;
+}
 ul,li{
     list-style: none;
 }
