--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -13,23 +13,44 @@ ul,li{
     list-style: none;
 }
 
+// ::-webkit-scrollbar {
+//     /*滚动条整体样式*/
+//     width : 7px;  /*高宽分别对应横竖滚动条的尺寸*/
+//     height: 1px;
+// }
+// ::-webkit-scrollbar-thumb {
+//     /*滚动条里面小方块*/
+//     border-radius: 5px;
+//     box-shadow   : inset 0 0 2px rgba(0, 0, 0, 0.2);
+//     background   : #ccc;
+// }
+// ::-webkit-scrollbar-track {
+//     /*滚动条里面轨道*/
+//     box-shadow   : inset 0 0 2px rgba(0, 0, 0, 0.2);
+//     border-radius: 5px;
+//     background   : #f2f2f2;
+// }
+
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 ::-webkit-scrollbar {
-    /*滚动条整体样式*/
-    width : 7px;  /*高宽分别对应横竖滚动条的尺寸*/
-    height: 1px;
-}
-::-webkit-scrollbar-thumb {
-    /*滚动条里面小方块*/
-    border-radius: 5px;
-    box-shadow   : inset 0 0 2px rgba(0, 0, 0, 0.2);
-    background   : #ccc;
-}
-::-webkit-scrollbar-track {
-    /*滚动条里面轨道*/
-    box-shadow   : inset 0 0 2px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    background   : #f2f2f2;
-}
-
-
+    width: 8px;
+    height: 8px;
+  
+    //background-color: #F5F5F5;
+  }
+  
+  /*定义滚动条轨道 内阴影+圆角*/
+  ::-webkit-scrollbar-track {
+    //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    //border-radius: 10px;
+    //background-color: #F5F5F5;
+  }
+  
+  /*定义滑块 内阴影+圆角*/
+  ::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    //border-radius: 10px;
+    //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: rgba(0, 0, 0, .2);
+  }
 
