--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -53,4 +53,47 @@ ul,li{
     //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
     background-color: rgba(0, 0, 0, .2);
   }
+.el-dialog__header{
+    background: #F2F6FC;
+}
+.el-form{
+    &::after{
+        clear: both;
+        content: '';
+        display: block;
+        height: 0;
+    }
+}
+
+.el-dialog__body{
+    padding: 30px 50px 20px 20px;
+}
+
+.el-dialog__wrapper{
+    &.column-two, &.column-three{
+        &>.el-dialog{
+            $diff: 50px;
+            max-height: calc(100% - #{$diff});
+            overflow: hidden;
+            top: 10px;
+            width: 90% !important;
+            max-width: 1204px;
+        }
+    }
+    &.column-two{
+        .el-form-item{
+            float: left;
+            width: 49%;
+        }    
+    }
+    &.column-three{
+        &>.el-dialog{
+            width: 90% !important;
+        }
+        .el-form-item{
+            float: left;
+            width: 32%;
+        }
+    }
+}
 
