--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -123,8 +123,14 @@ ul,li{
 
 .query-container{
     padding: 10px 10px 0 10px;
+    position: relative;
     .el-form-item{
         margin-bottom: 10px;
+    }
+    &>.right{
+        position: absolute;
+        top:10px; 
+        right:15px;
     }
 }
 
