--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -116,6 +116,12 @@ ul,li{
     float: left;
     display: inline-block;
 }
+.col-three {
+    width: 32%;
+    box-sizing: border-box;
+    float: left;
+    display: inline-block;
+}
 .del{
     color: #ff4343;
     cursor: pointer;
