--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -140,6 +140,19 @@ ul,li{
     }
 }
 
+.button-container {
+    //margin-top: 10px;
+    //margin-bottom: 10px;
+    padding: 10px;
+    background-color: #fff;
+
+    border-top: 4px solid #eee;
+    /* a {
+      margin: 10px;
+
+    } */
+}
+
 .el-table th{
     background: #EBEEF5 !important;
     color: #666;
