--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -55,6 +55,7 @@ ul,li{
   }
 .el-dialog__header{
     background: #F2F6FC;
+    padding: 15px 20px 10px;
 }
 .el-form{
     &::after{
@@ -74,6 +75,7 @@ ul,li{
 
 .el-dialog__footer{
     border-top: 1px solid #E4E7ED;
+    padding: 10px 20px 15px;
 }
 .el-dialog__wrapper{
     &.column-two, &.column-three{
